--- a/FirstMVCPlugg/appsettings.json
+++ b/FirstMVCPlugg/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "FirstMVCPluggContext": "Server=(localdb)\\mssqllocaldb;Database=FirstMVCPlugg.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
